[package]
name = "dhcdev"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
comrak = "0.36"
syntect = "5"
minijinja = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
